Improve hybrid retrieval filtering and embedding robustness